--- a/Data Perú/Conflictos sociales/textoConflictos.ipynb
+++ b/Data Perú/Conflictos sociales/textoConflictos.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-26T04:48:17.417669300Z",
-     "start_time": "2023-10-26T04:48:16.896863300Z"
+     "end_time": "2023-10-27T04:35:54.823423500Z",
+     "start_time": "2023-10-27T04:35:54.814192300Z"
     }
    },
    "outputs": [],
@@ -17,7 +17,8 @@
     "import pandas as pd\n",
     "from unidecode import unidecode\n",
     "import re\n",
-    "import time"
+    "import time\n",
+    "from datetime import datetime, timedelta"
    ]
   },
   {
@@ -91,8 +92,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T04:48:23.761767100Z",
-     "start_time": "2023-10-26T04:48:23.743392800Z"
+     "end_time": "2023-10-27T04:34:53.578274700Z",
+     "start_time": "2023-10-27T04:34:53.553298900Z"
     }
    },
    "id": "1d27947fcf7b366a"
@@ -118,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T04:48:28.162922900Z",
-     "start_time": "2023-10-26T04:48:28.150386200Z"
+     "end_time": "2023-10-27T04:35:00.608717100Z",
+     "start_time": "2023-10-27T04:35:00.603713500Z"
     }
    },
    "id": "d006d76eb3b02cae"
@@ -171,27 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "result_dict = generate_month_year_dict(2007, 1, 2023, 8)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-26T05:08:23.831899700Z",
-     "start_time": "2023-10-26T05:08:23.827495Z"
-    }
-   },
-   "id": "400f12f8a761e1c9"
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "from datetime import datetime, timedelta\n",
-    "\n",
     "def generate_month_year_dict(start_year, start_month, end_year, end_month):\n",
     "    start_date = datetime(start_year, start_month, 1)\n",
     "    end_date = datetime(end_year, end_month, 1)\n",
@@ -216,15 +199,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T04:48:34.225170100Z",
-     "start_time": "2023-10-26T04:48:34.223613100Z"
+     "end_time": "2023-10-27T04:35:27.499020600Z",
+     "start_time": "2023-10-27T04:35:27.499020600Z"
     }
    },
    "id": "3ffc13ed58de10f3"
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def datosConflictos(nInforme):\n",
@@ -468,6 +451,31 @@
     "        for i, lista in enumerate(listas):\n",
     "            listas[i] = [tex.replace(patron,\"\") for tex in lista]\n",
     "    \n",
+    "    tiposUnicos = ['Socioambiental',\n",
+    "                   'Asuntos de gobierno nacional',\n",
+    "                   'Asuntos de gobierno regional',\n",
+    "                   'Asuntos de gobierno local',\n",
+    "                   'Asunto de gobierno nacional',\n",
+    "                   'Asunto de gobierno regional',\n",
+    "                   'Asunto de gobierno local',\n",
+    "                   'Comunal',\n",
+    "                   'Otros asuntos',\n",
+    "                   'Laboral',\n",
+    "                   'Demarcacion territorial',\n",
+    "                   'Cultivo ilegal de hoja de coca',\n",
+    "                   'Asuntos de Gobiernos Regional',\n",
+    "                   'Asuntos de Gobierno Local',\n",
+    "                   'Asuntos de Gobiernos Nacional',\n",
+    "                   'Tipo otros asuntos',\n",
+    "                   'Demarcacion Territorial',\n",
+    "                   'Por asuntos de gobierno local',\n",
+    "                   'Por asuntos de gobierno nacional',\n",
+    "                   'Por asuntos de gobierno regional'\n",
+    "                   ]\n",
+    "    regexTipos = convert_to_regex(tiposUnicos)\n",
+    "    for i, word in enumerate(tiposUnicos):\n",
+    "        tipoList = [re.sub(regexTipos[i], word, elem) for elem in tipoList]\n",
+    "    \n",
     "    diccionario = {key: lista for key, lista in zip(keyList, listas)}\n",
     "    data = pd.DataFrame(diccionario)\n",
     "    data['Mes'] = result_dict[nInforme - 36]\n",
@@ -477,8 +485,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T05:09:22.651613700Z",
-     "start_time": "2023-10-26T05:09:22.645607400Z"
+     "end_time": "2023-10-27T15:13:53.973845200Z",
+     "start_time": "2023-10-27T15:13:53.926078200Z"
     }
    },
    "id": "6a6e7811c36a5853"
@@ -603,6 +611,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "path = r\"C:\\Users\\User\\OneDrive - Universidad del Pacífico\\1. Documentos\\0. Bases de datos\\14. Conflictos sociales\"\n",
+    "\n",
+    "df = pd.read_csv(path + \"\\dataConflitos.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-27T04:54:49.798616500Z",
+     "start_time": "2023-10-27T04:54:49.578549500Z"
+    }
+   },
+   "id": "6021c0246d5d714b"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "outputs": [],
    "source": [
@@ -646,25 +672,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([' Socioambiental', 'Asuntos de gobierno nacional',\n       ' Asuntos de gobierno nacional', ' Asuntos de gobierno regional',\n       'Socioambiental', ' Asuntos de gobierno regional ',\n       'Asuntos de gobierno local', 'Comunal', ' Comunal',\n       ' Otros asuntos', ' Socioambiental ', 'Otros asuntos',\n       ' Asuntos de gobierno local', 'Socioambiental ',\n       ' Asunto de gobierno regional', ' Asunto de gobierno local',\n       ' Laboral', 'Socioambiental  ', ' Socioambie ntal',\n       ' Socioa mbiental', ' Asuntos de gobiernos r egional ',\n       ' Demarcacion territorial', ' Asuntos de gobierno local ',\n       ' Cultivo ilegal de hoja de coca',\n       ' Asuntos de gobiernos regional ', 'Asuntos de gobierno regional',\n       ' Asuntos de Gobiernos Regional', ' Asuntos de Gobierno Local',\n       ' Socioambient al ', 'Laboral', ' Comunal ', 'Socioambien tal',\n       'Socioambiental. ', 'Socioambie ntal', ' Socioambiental. ',\n       'Socioamb iental', 'Socioambiental . (*) ', ' Socio ambiental',\n       'Otros as untos', 'Socioam biental', ' Socioambie ntal ',\n       'Socioambi ental', ' Cultivo ilegal de hoja de coc a',\n       'Socioambienta l', ' Asuntos de g obierno nacional',\n       ' Socioamb iental', 'Socioa mbiental', ' Socioambient al',\n       ' Asuntos de gobierno naci onal', ' Asunt os de gobierno nacional',\n       ' Asuntos de go bierno nacional', ' Asuntos de  gobierno regional',\n       'Asuntos de gobierno loca l', 'Asuntos de gobierno naciona l',\n       ' Asuntos de gobierno loca l', ' Asuntos de gobierno nacional. ',\n       'Asunt os de gobierno local', ' Asuntos  de gobierno regional',\n       ' Asuntos d e gobierno nacional', ' Socioambi ental',\n       'Asuntos de gobierno nac ional',\n       ' Por asuntos de gobierno regional',\n       'Asuntos de gobier no regional', ' Asunt o de gobierno regional',\n       ' Socioambienta l ', 'Demarcacion territorial',\n       ' Asunto de gobierno l ocal ', ' Socioambienta l',\n       ' Asuntos de gobierno nacional ', ' Demarcacion Territorial',\n       ' Por asuntos de gobierno local', ' Socioam biental',\n       ' Socio ambiental ', ' Dema rcacion t erritorial',\n       ' Por as untos de gobierno regional',\n       ' Asunto de gobierno r egiona l', ' Asuntos de gobiern o regional',\n       ' Comuna l', 'Socio ambiental', 'Socioambient al',\n       ' Asuntos  de gobierno nac ional', ' Socioambien tal',\n       ' Demarcacion Territorial ', 'Asuntos de gobierno nacio nal',\n       ' Asuntos de gobierno r egional', 'Asunto s de gobierno regional',\n       ' Demarcacion terr itorial', ' Asunto  de gobierno regional',\n       ' Demarcacion Ter ritorial', 'Asuntos de gobie rno nacional',\n       ' Asuntos de gobierno nacion al', ' Comun al',\n       ' Asuntos de gobierno naciona l', 'Demarc acion territorial',\n       ' Asuntos de gob ierno regional', 'Asuntos de gobierno  regional',\n       ' Asuntos de gobierno regi onal', ' Tipo otros asuntos',\n       ' Asuntos de gobie rno regional', 'Asuntos de gobi erno nacional',\n       ' Asunto de gobierno regiona l', ' Socioambien tal ',\n       'Asuntos de gobierno reg ional', ' Comuna l ',\n       ' Asuntos de gob ierno re gional', ' Otros asunt os',\n       'Demarcacion te rritorial', ' Asuntos de gobie rno local',\n       'Demarcacion Territorial', 'Asuntos de gobierno regi onal',\n       ' Demarc acion terr itorial', 'Asuntos de gobierno naci onal',\n       'Asuntos de gobierno regio nal ',\n       'Por asuntos de gobierno nacional', 'Labo ral', ' Otros asun tos',\n       ' Asuntos de gobierno Local', ' Por asuntos de g obierno local',\n       ' Asuntos de gobierno region al', ' Asuntos de gobie rno nacional',\n       ' Otros  Asuntos', ' Demarcacion territorial ',\n       ' Demarcacio n Territorial', 'Por asuntos de go bierno nacional',\n       'Asuntos  de gobierno nacional', 'Comu nal',\n       'Asuntos de gobierno l ocal', ' Labo ral',\n       'Asuntos de gobierno na cional', ' Asuntos de gobi erno regional',\n       ' Asuntos de gobierno lo cal'], dtype=object)"
+      "text/plain": "array([' Socioambiental', 'Asuntos de gobierno nacional',\n       ' Asuntos de gobierno nacional', ' Asuntos de gobierno regional',\n       'Socioambiental', ' Asuntos de gobierno regional ',\n       'Asuntos de gobierno local', 'Comunal', ' Comunal',\n       ' Otros asuntos', ' Socioambiental ', 'Otros asuntos',\n       ' Asuntos de gobierno local', 'Socioambiental ',\n       ' Asunto de gobierno regional', ' Asunto de gobierno local',\n       ' Laboral', 'Socioambiental  ', ' Socioambie ntal',\n       ' Socioa mbiental', ' Asuntos de gobiernos r egional ',\n       ' Demarcacion territorial', ' Asuntos de gobierno local ',\n       ' Cultivo ilegal de hoja de coca',\n       ' Asuntos de gobiernos regional ', 'Asuntos de gobierno regional'],\n      dtype=object)"
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = datosConflictos(235)\n",
     "df['Tipo'].unique()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T14:38:16.411171600Z",
-     "start_time": "2023-10-26T14:38:16.395360Z"
+     "end_time": "2023-10-27T15:14:21.671166100Z",
+     "start_time": "2023-10-27T15:13:59.852518900Z"
     }
    },
    "id": "5387b06dd10292e2"
