--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -132,7 +132,8 @@ Atlas.ti & Intermediate\\
 
 \begin{rSection}{Publications}
 During my professional experience I have contributed to the following publications:
-\item Bustamante, P. (2022) \emph{La necesaria viabilidad social para el desarrollo sostenible de la minería}. En L. M. Castilla et al (2022), \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.} 
+\item Bustamante, P. (2022) \emph{La necesaria viabilidad social para el desarrollo sostenible de la minería}. En L. M. Castilla et al (2022), \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.}
+\item Bustamante, P., Núñez, C. (2023) \emph{Generación de valor, rentabilidad social y conflictividad en el entorno de proyectos mineros en Perú}. Documento de Discusión. Lima: Banco Interamericano de Desarrollo. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.}
 \item Castilla, L. M. (2021) \emph{Reactivación Económica para el crecimiento sostenido}. En L. M. Castilla et al (2021), \textit{Propuestas del Bicentenario: Rutas para un país en desarrollo} (págs. 29-64). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786124272813/12336851}{here.}
 \item Castilla, L. M. (2022) \emph{Encadenamientos productivos y desarrollo regional: el caso de la minería.}.  En L. M. Castilla et al (2022), \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.} 
 \item Castilla, L. M., Seinfeld, J., von Hese, M., Besich, N. (2021) \emph{Introducción}. En L. M. Castilla et al (2021), \textit{Propuestas del Bicentenario: Rutas para un país en desarrollo} (págs. 29-64). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786124272813/12336851}{here.}
