--- a/Data Perú/ENDES/indicadoresDIT.ipynb
+++ b/Data Perú/ENDES/indicadoresDIT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 1. Nacimiento saludable"
+    "# Indicadores DIT"
    ],
    "metadata": {
     "collapsed": false
@@ -12,20 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 123,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-24T17:11:11.710919400Z",
-     "start_time": "2023-11-24T17:11:11.141950300Z"
+     "end_time": "2023-11-24T21:42:12.169617400Z",
+     "start_time": "2023-11-24T21:42:12.165787700Z"
     }
    },
    "outputs": [],
    "source": [
     "#Librerías\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
@@ -134,12 +135,12 @@
    "execution_count": 76,
    "outputs": [],
    "source": [
-    "# Generando variables de interés\n",
+    "# Generando variables de características del hogar/madre\n",
     "mergedDIT['v149_'] = mergedDIT['v149'].array.codes\n",
     "mergedDIT['educa'] = 1  # Initialize with a default value\n",
     "mergedDIT.loc[mergedDIT['v149_'] > 2, 'educa'] = 2\n",
     "mergedDIT.loc[mergedDIT['v149_'] == 5, 'educa'] = 3\n",
-    "del mergedDIT['v149_']\n"
+    "del mergedDIT['v149_']"
    ],
    "metadata": {
     "collapsed": false,
@@ -151,29 +152,257 @@
    "id": "6d85c6e5a973a70b"
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "qi478e3\n",
-      "Si                     4593\n",
-      "No                      608\n",
-      "No responde/No sabe       3\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "print(mergedDIT['qi478e3'].value_counts())"
+    "### Generación de variables de apego"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ae2e7c7bb3478480"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "outputs": [],
+   "source": [
+    "## Porcentaje de madres de niñas y niños entre 9 y 12 meses de edad que responde de manera inmediata y adecuada al llanto de su hija/o\n",
+    "mergedDIT['sensMadre9a12'] = 0\n",
+    "mergedDIT['qi478'] = mergedDIT['qi478'].values\n",
+    "cond = (mergedDIT['qi478'] >= 9) & (mergedDIT['qi478'] <= 12)\n",
+    "cond1 = (mergedDIT['qi478e10'] == \"Deja de hacer lo que está haciendo y la/lo atiende\") | (mergedDIT['qi478e10'] ==  \"Le pide otra persona que la(o) atienda\") | (mergedDIT['qi478e10'] == \"La (Lo) atiende aun cuando siga haciendo sus labores\")\n",
+    "mergedDIT.loc[ cond & cond1 ,'sensMadre9a12'] = 1\n",
+    "mergedDIT.loc[-cond,'sensMadre9a12'] = np.nan\n",
+    "\n",
+    "## Porcentaje de niños y niñas entre 9 y 12 meses de edad que tiene adecuada interacción madre-hijo/a como precursor del apego seguro\n",
+    "mergedDIT['apego9a12'] = 0\n",
+    "mergedDIT['apego9a12a'] = 0\n",
+    "mergedDIT['apego9a12b'] = 0\n",
+    "mergedDIT['apego9a12c'] = 0\n",
+    "cond1 = (mergedDIT['qi478e7'] == \"No\") \n",
+    "cond2 = (mergedDIT['qi478e8'] == \"No\") \n",
+    "cond3 = (mergedDIT['qi478e9'] == \"No\")\n",
+    "\n",
+    "# Apego seguro - dummy\n",
+    "mergedDIT.loc[ cond & cond1 & cond2 & cond3 ,'apego9a12'] = 1\n",
+    "mergedDIT.loc[-cond,'apego9a12'] = np.nan\n",
+    "\n",
+    "# Apego seguro - categórica\n",
+    "mergedDIT.loc[ cond & cond1 ,'apego9a12a'] = 1\n",
+    "mergedDIT.loc[-cond,'apego9a12a'] = np.nan\n",
+    "mergedDIT.loc[ cond & cond2 ,'apego9a12b'] = 1\n",
+    "mergedDIT.loc[-cond,'apego9a12b'] = np.nan\n",
+    "mergedDIT.loc[ cond & cond3 ,'apego9a12c'] = 1\n",
+    "mergedDIT.loc[-cond,'apego9a12c'] = np.nan\n",
+    "mergedDIT['apego9a12_cat'] = mergedDIT['apego9a12a'] + mergedDIT['apego9a12b'] + mergedDIT['apego9a12c']\n",
+    "mergedDIT.loc[-cond,'apego9a12_cat'] = np.nan\n",
+    "\n",
+    "del mergedDIT['apego9a12a'] , mergedDIT['apego9a12b'] , mergedDIT['apego9a12c']"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T18:04:47.117953300Z",
-     "start_time": "2023-11-24T18:04:47.104571900Z"
+     "end_time": "2023-11-24T22:52:58.074529Z",
+     "start_time": "2023-11-24T22:52:58.056928400Z"
+    }
+   },
+   "id": "504f2ff9d54d6881"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "apego9a12_cat\n3.0    2331\n2.0    1841\n1.0     678\n0.0     399\nName: count, dtype: int64"
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedDIT['apego9a12_cat'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T22:26:58.722789600Z",
+     "start_time": "2023-11-24T22:26:58.715980300Z"
+    }
+   },
+   "id": "ee258ec48a63e9d3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Generando variables de comunicación efectiva"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c53f4a3b8c4625af"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "outputs": [],
+   "source": [
+    "#Porcentaje de niñas y niños de 9 a 36 meses con comunicación verbal a nivel comprensivo y expresivo apropiada para su edad\n",
+    "for grupo in ['9a12','13a18', '19a23', '24a36']:\n",
+    "    mergedDIT[f'comEfec{grupo}'] = 0\n",
+    "    mergedDIT[f'comEfec{grupo}a'] = 0\n",
+    "    mergedDIT[f'comEfec{grupo}b'] = 0\n",
+    "    mergedDIT[f'comEfec{grupo}c'] = 0\n",
+    "\n",
+    "\n",
+    "mergedDIT['qi478'] = mergedDIT['qi478'].values\n",
+    "cond9a12 = (mergedDIT['qi478'] >= 9) & (mergedDIT['qi478'] <= 12) \n",
+    "cond9a12a = (mergedDIT['qi478e3'] == \"Si\")\n",
+    "cond9a12b = (mergedDIT['qi478e4'] == \"Si\")\n",
+    "cond9a12c = (mergedDIT['qi478e5'] == \"Si\")\n",
+    "cond13a18 = (mergedDIT['qi478'] >= 13) & (mergedDIT['qi478'] <= 18)\n",
+    "cond13a18a = (mergedDIT['qi478f3'] == \"Si\")\n",
+    "cond13a18b = (mergedDIT['qi478f4'] == \"Si\")\n",
+    "cond13a18c = (mergedDIT['qi478f5'] == \"Si\")\n",
+    "cond19a23 = (mergedDIT['qi478'] >= 19) & (mergedDIT['qi478'] <= 23)\n",
+    "cond19a23a = (mergedDIT['qi478g1'] == \"Si\")\n",
+    "cond19a23b = ((mergedDIT['qi478g2_a'] == \"Si\") & (mergedDIT['qi478g2_b'] == \"Si\") & (mergedDIT['qi478g2_c'] == \"Si\"))\n",
+    "cond19a23c = (mergedDIT['qi478g3'] == \"Si\")\n",
+    "cond24a36 = (mergedDIT['qi478'] >= 24) & (mergedDIT['qi478'] <= 36)\n",
+    "cond24a36a = (mergedDIT['qi478h1'] == \"Si\")\n",
+    "cond24a36b = (mergedDIT['qi478h2'] == \"Si\") \n",
+    "cond24a36c = (mergedDIT['qi478h3'] == \"Si\")\n",
+    "\n",
+    "for grupo in ['9a12','13a18', '19a23', '24a36']:\n",
+    "    # Comunicacion efectiva - dummy por edad\n",
+    "    mergedDIT.loc[ locals()[f'cond{grupo}'] & locals()[f'cond{grupo}a'] & locals()[f'cond{grupo}b'] & locals()[f'cond{grupo}c'] ,f'comEfec{grupo}'] = 1\n",
+    "    mergedDIT.loc[-locals()[f'cond{grupo}'],f'comEfec{grupo}'] = np.nan\n",
+    "\n",
+    "    # Comunicacion efectiva - categórica por edad\n",
+    "    mergedDIT.loc[ locals()[f'cond{grupo}'] & locals()[f'cond{grupo}a'] ,f'comEfec{grupo}a'] = 1\n",
+    "    mergedDIT.loc[-locals()[f'cond{grupo}'],f'comEfec{grupo}a'] = np.nan\n",
+    "    mergedDIT.loc[ locals()[f'cond{grupo}'] & locals()[f'cond{grupo}b'] ,f'comEfec{grupo}b'] = 1\n",
+    "    mergedDIT.loc[-locals()[f'cond{grupo}'],f'comEfec{grupo}b'] = np.nan\n",
+    "    mergedDIT.loc[ locals()[f'cond{grupo}'] & locals()[f'cond{grupo}c'] ,f'comEfec{grupo}c'] = 1\n",
+    "    mergedDIT.loc[-locals()[f'cond{grupo}'],f'comEfec{grupo}c'] = np.nan\n",
+    "    mergedDIT[f'comEfec{grupo}_cat'] = mergedDIT[f'comEfec{grupo}a'] + mergedDIT[f'comEfec{grupo}b'] + mergedDIT[f'comEfec{grupo}c']\n",
+    "    mergedDIT.loc[-locals()[f'cond{grupo}'], f'comEfec{grupo}_cat'] = np.nan\n",
+    "    \n",
+    "    del mergedDIT[f'comEfec{grupo}a'] , mergedDIT[f'comEfec{grupo}b'] , mergedDIT[f'comEfec{grupo}c']\n",
+    "\n",
+    "\n",
+    "for var_name in list(locals()):\n",
+    "    if var_name.startswith('cond'):\n",
+    "        del locals()[var_name]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T22:52:03.914332700Z",
+     "start_time": "2023-11-24T22:52:03.847404700Z"
+    }
+   },
+   "id": "ebfcc17cf68535d1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                 apego9a12  apego9a12_cat  comEfec9a12  comEfec9a12_cat\napego9a12         1.000000       0.811155    -0.026716        -0.007959\napego9a12_cat     0.811155       1.000000     0.002029         0.047939\ncomEfec9a12      -0.026716       0.002029     1.000000         0.881844\ncomEfec9a12_cat  -0.007959       0.047939     0.881844         1.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>apego9a12</th>\n      <th>apego9a12_cat</th>\n      <th>comEfec9a12</th>\n      <th>comEfec9a12_cat</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>apego9a12</th>\n      <td>1.000000</td>\n      <td>0.811155</td>\n      <td>-0.026716</td>\n      <td>-0.007959</td>\n    </tr>\n    <tr>\n      <th>apego9a12_cat</th>\n      <td>0.811155</td>\n      <td>1.000000</td>\n      <td>0.002029</td>\n      <td>0.047939</td>\n    </tr>\n    <tr>\n      <th>comEfec9a12</th>\n      <td>-0.026716</td>\n      <td>0.002029</td>\n      <td>1.000000</td>\n      <td>0.881844</td>\n    </tr>\n    <tr>\n      <th>comEfec9a12_cat</th>\n      <td>-0.007959</td>\n      <td>0.047939</td>\n      <td>0.881844</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation_matrix = mergedDIT[['apego9a12', 'apego9a12_cat', 'comEfec9a12', 'comEfec9a12_cat']].corr()\n",
+    "correlation_matrix"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T22:58:22.931126300Z",
+     "start_time": "2023-11-24T22:58:22.914194500Z"
+    }
+   },
+   "id": "6f19491310792b59"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "comEfec9a12_cat\n3.0    4014\n2.0     895\n1.0     232\n0.0     108\nName: count, dtype: int64"
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedDIT['comEfec9a12_cat'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T22:49:32.354688700Z",
+     "start_time": "2023-11-24T22:49:32.344982100Z"
+    }
+   },
+   "id": "64beba04ff83092c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "qi478e7\nNo                     3947\nSi                     1255\nNo responde/No sabe       2\nName: count, dtype: int64"
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedDIT['qi478e7'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T21:45:50.380408400Z",
+     "start_time": "2023-11-24T21:45:50.350403700Z"
+    }
+   },
+   "id": "b35eabc760aa5927"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "precursorApego9a12\n0.0    2918\n1.0    2331\nName: count, dtype: int64"
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedDIT['precursorApego9a12'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T21:49:25.611398500Z",
+     "start_time": "2023-11-24T21:49:25.583228600Z"
     }
    },
    "id": "6d7fb66ee7533de"
