--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -39,8 +39,7 @@ Coursework: Designing and Running Randomized Evaluations, Data Analysis for Soci
 Currently enrolled in the program. Already approved 3 out of 6 courses of the program.
 
 {\bf Specialization in Data Science for Social Sciences and Public Management}, Pontificia Universidad Católica del Perú - PUCP \hfill {2022 - 2023}\\
-Coursework: Python Intermediate, Introduction to Machine Learning, Advanced Applied Econometrics.
-Currently enrolled in the program. Already approved 8 out of 10 courses of the program.
+GPA: 18.4/20.0 | Coursework: Python Intermediate, Introduction to Machine Learning, Advanced Applied Econometrics, Introduction to Deep Learning and Natural Processing Learning.
 
 {\bf Governance, Political Management and Public Management Program}, Pontificia Universidad Católica del Perú - PUCP \hfill {2020 - 2021}\\
 Completed with satisfactory approval by the Development Bank of Latin America (CAF) and PUCP. 
