--- a/bib2dataframe.ipynb
+++ b/bib2dataframe.ipynb
@@ -5,108 +5,77 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import bibtexparser\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-14T17:12:20.785107100Z",
-     "start_time": "2023-12-14T17:12:19.090558900Z"
+     "end_time": "2024-02-24T01:02:09.111692400Z",
+     "start_time": "2024-02-24T01:01:49.710617300Z"
     }
    },
    "id": "18a647eff7536d82"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "execution_count": 2,
+   "id": "494c2fa68a2bb1c4",
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-24T01:02:09.158030800Z",
+     "start_time": "2024-02-24T01:02:09.130855800Z"
+    }
    },
-   "outputs": [],
-   "source": [
-    "# Function to convert BibTeX entries to DataFrame\n",
-    "def bib_to_dataframe(bib_file):\n",
-    "    with open(bib_file, 'r', encoding='utf-8') as bibtex_file:\n",
-    "        bib_database = bibtexparser.load(bibtex_file)\n",
-    "\n",
-    "    data = []\n",
-    "    for entry in bib_database.entries:\n",
-    "        data.append(entry)\n",
-    "\n",
-    "    # Convert the list of dictionaries to a DataFrame\n",
-    "    df = pd.DataFrame(data)\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "# Specify the path to your BibTeX file\n",
-    "bib_file_path = r'C:\\Users\\User\\Downloads\\scopusConceptualFramework_Multilevel.bib'\n",
-    "\n",
-    "# Convert BibTeX to DataFrame\n",
-    "bib_dataframe = bib_to_dataframe(bib_file_path)\n",
-    "\n",
-    "# Display the DataFrame\n",
-    "print(bib_dataframe)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6356\\2437527914.py:14: DeprecationWarning: invalid escape sequence '\\-'\n",
-      "  abstract = abstract.encode('utf-8').decode('unicode_escape')\n"
+      "['Scopus_AI1.csv', 'Scopus_AI2.csv', 'Scopus_AI3.csv', 'Scopus_ALL.csv', 'Scopus_AT10.csv', 'Scopus_AT11.csv', 'Scopus_AT12.csv', 'Scopus_AT13.csv', 'Scopus_AT14.csv', 'Scopus_AT15.csv', 'Scopus_AT16.csv', 'Scopus_AT17.csv', 'Scopus_AT18.csv', 'Scopus_AT4.csv', 'Scopus_AT5.csv', 'Scopus_AT7.csv', 'Scopus_AT8.csv', 'Scopus_AT9.csv', 'Scopus_G1.csv', 'Scopus_G10.csv', 'Scopus_G10_1.csv', 'Scopus_G12.csv', 'Scopus_G13.csv', 'Scopus_G14.csv', 'Scopus_G15.csv', 'Scopus_G16.csv', 'Scopus_G17.csv', 'Scopus_G18.csv', 'Scopus_G19.csv', 'Scopus_G2.csv', 'Scopus_G3.csv', 'Scopus_G4.csv', 'Scopus_G5.csv', 'Scopus_G6.csv', 'Scopus_G7.csv', 'Scopus_G8.csv', 'Scopus_G9.csv', 'Scopus_SG1.csv', 'Scopus_SG10.csv', 'Scopus_SG11.csv', 'Scopus_SG12.csv', 'Scopus_SG13.csv', 'Scopus_SG14.csv', 'Scopus_SG15.csv', 'Scopus_SG16.csv', 'Scopus_SG17.csv', 'Scopus_SG17_2.csv', 'Scopus_SG2.csv', 'Scopus_SG20.csv', 'Scopus_SG21.csv', 'Scopus_SG22.csv', 'Scopus_SG23.csv', 'Scopus_SG24.csv', 'Scopus_SG25.csv', 'Scopus_SG3.csv', 'Scopus_SG4.csv', 'Scopus_SG5.csv', 'Scopus_SG6.csv', 'Scopus_SG7.csv', 'Scopus_SG8.csv', 'Scopus_SG9.csv', 'Scopus_T1.csv', 'Scopus_T10.csv', 'Scopus_T11.csv', 'Scopus_T12.csv', 'Scopus_T13.csv', 'Scopus_T14.csv', 'Scopus_T15.csv', 'Scopus_T16.csv', 'Scopus_T17.csv', 'Scopus_T19.csv', 'Scopus_T2.csv', 'Scopus_T20.csv', 'Scopus_T21.csv', 'Scopus_T22.csv', 'Scopus_T23.csv', 'Scopus_T24.csv', 'Scopus_T27.csv', 'Scopus_T28.csv', 'Scopus_T29.csv', 'Scopus_T3.csv', 'Scopus_T30.csv', 'Scopus_T31.csv', 'Scopus_T4.csv', 'Scopus_T5.csv', 'Scopus_T7.csv', 'Scopus_T8.csv', 'Scopus_T8_2.csv', 'Scopus_T9.csv']\n"
      ]
     }
    ],
    "source": [
-    "# Function to convert BibTeX entries to DataFrame\n",
-    "def bib_to_dataframe(bib_file):\n",
-    "    with open(bib_file, 'r', encoding='utf-8') as bibtex_file:\n",
-    "        bib_database = bibtexparser.load(bibtex_file)\n",
-    "\n",
-    "    data = []\n",
-    "    for entry in bib_database.entries:\n",
-    "        # Extract abstract and handle multiline abstracts\n",
-    "        abstract = entry.get('abstract', '')\n",
-    "        if '\\n' in abstract:\n",
-    "            abstract = abstract.replace('\\n', ' ')\n",
-    "\n",
-    "        # Handle special characters\n",
-    "        abstract = abstract.encode('utf-8').decode('unicode_escape')\n",
-    "\n",
-    "        entry['abstract'] = abstract\n",
-    "        data.append(entry)\n",
-    "\n",
-    "    # Convert the list of dictionaries to a DataFrame\n",
-    "    df = pd.DataFrame(data)\n",
-    "\n",
-    "    return df\n",
-    "\n",
     "# Specify the path to your BibTeX file\n",
-    "bib_file_path = r'C:\\Users\\User\\Downloads\\scopusConceptualFramework_Multilevel.bib'\n",
+    "path = r'C:\\Users\\User\\OneDrive - MIGRACIÓN VIDENZA\\1. Proyectos\\1. Proyectos actuales\\GiZ Pobreza Urbana\\1. Productos\\2. Producto 2\\Papers'\n",
     "\n",
+    "listScopus = [item for item in os.listdir(path) if item.startswith(\"Scopus\")]\n",
+    "print(listScopus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se pudo con AT12\n"
+     ]
+    }
+   ],
+   "source": [
     "# Convert BibTeX to DataFrame\n",
-    "bib_dataframe = bib_to_dataframe(bib_file_path)\n",
-    "\n",
-    "# Set display options to show more content for abstracts\n",
-    "pd.set_option('display.max_colwidth', None)\n",
-    "\n",
-    "excel_file_path = r'C:\\Users\\User\\Downloads\\biblio_data.xlsx'\n",
-    "bib_dataframe.to_excel(excel_file_path, index=False)\n"
+    "dfScopus = pd.DataFrame()\n",
+    "for file in listScopus:    \n",
+    "    try:\n",
+    "        df = pd.read_csv(path + r'/' +  file)\n",
+    "        df['Codigo'] = file[7:-4]\n",
+    "        dfScopus = pd.concat((dfScopus, df))\n",
+    "    except:\n",
+    "        print(f\"No se pudo con {file[7:-4]}\")"
    ],
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-15T00:34:12.687322600Z",
-     "start_time": "2023-12-15T00:34:09.228912300Z"
+     "end_time": "2024-02-24T01:02:10.035594100Z",
+     "start_time": "2024-02-24T01:02:09.158030800Z"
     }
    },
-   "id": "740557a89485d2f2"
+   "id": "initial_id",
+   "execution_count": 3
   }
  ],
  "metadata": {
