Actualizar resume_CNH_eng.tex

--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -5,12 +5,10 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{César Núñez Huamán} % Your name
 % You can merge both of these into a single line, if you do not have a website.
-\address{(773) 886-8445 \\ Chicago, IL \\ \href{mailto:cnunezh@uchicago.edu}{cnunezh@uchicago.edu}}
+\address{(773) 886-8445 \\ \href{mailto:cnunezh@uchicago.edu}{cnunezh@uchicago.edu}}
 \address{ \href{https://github.com/cesarnunezh}{GitHub Profile} \\ \href{https://linkedin.com/in/cesar-nunez-huaman}{LinkedIn Profile} \\ \href{https://cesarnunezh.github.io/}{Web page}}   %
 
 \begin{document}
-
-\item {Bachelor in Economics with a concentration in economics for the public sector and with more than 6 years of experience in consulting in public policies, social policies and economics. I have studies in qualitative and quantitative methods applied to the evaluation of social programs and public management. I have experience in database management in STATA, R and Python applied to social sciences.}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -18,7 +16,7 @@
 
 \begin{rSection}{Education}
 
-{\bf MSc in Computational Analysis and Public Policy}, University of Chicago \hfill {Expected June 2026} \\
+{\bf MSc in Computational Analysis and Public Policy}, The University of Chicago \hfill {June 2026 (Expected)} \\
 First year student
 
 {\bf Licensed Economist}, Universidad del Pacífico - UP \hfill {2020} \\
